# awesome-applejuice

./: .gitignore  .travis.yml  README.md  docker-compose.yml
client/: .eslintrc.js  Dockerfile  README.md  jest.config.js  package.json
client/src/: App.vue  config.js  main.js  main.scss  router.js  store.js
client/src/utils/: common.js  (+1 more)
server/: README.md  alembic.ini  requirements-migration.txt  requirements.txt  setup.cfg
server/Dockerfile/: migration  server
server/alembic/: env.py
server/alembic/versions/: 29ddcceecc11_added_user_table.py  4040194f150e_added_board_article_tables.py  52dea9573d6f_added_order_table.py  7d58def78fdd_inserted_default_boards_to_board_table.py
server/awesome_applejuice_backend/: auth.py  models.py  server.py
server/awesome_applejuice_backend/models/: __init__.py  article.py  base.py  order.py  user.py
server/awesome_applejuice_backend/subapps/: articles.py  auth.py  orders.py
server/awesome_applejuice_backend/utils/: http.py
server/ci/: alembic-ci.ini  settings-ci.toml
server/scripts/: run-test.sh
server/src/: auth.py  models.py  server.py  utils.py
server/src/awesome_applejuice_backend/: server.py
server/src/awesome_applejuice_backend/models/: article.py  board.py  order.py
server/src/awesome_applejuice_backend/subapps/: articles.py  auth.py  orders.py
server/src/awesome_applejuice_backend/utils/: http.py
server/tests/: conftest.py
server/tests/models/: test_article.py  test_base.py  test_order.py
server/tests/subapps/: test_articles.py  test_auth.py  test_orders.py
server/tests/utils/: test_http.py
(+21 files in other folders)
