[metadata]
name = awesome-applejuice-backend
version = 1.0.0
description = Awesome Applejuice backend source code
long_description = file: README.md
long_description_content_type = text/markdown
author = Suhwan Jee
author_email = jsh56son@gmail.com

[options]
package_dir =
     = src
packages = find_namespace:
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=40.1.0
install_requires =
    aiohttp==3.4.4
    aiohttp-cors==0.7.0
    asn1crypto==0.24.0
    async-timeout==3.0.0
    attrs==18.2.0
    cffi==1.11.5
    chardet==3.0.4
    cryptography==2.3.1
    dynaconf==1.1.0
    idna==2.7
    idna-ssl==1.1.0
    Mako==1.0.7
    MarkupSafe==1.0
    multidict==4.4.2
    pycparser==2.19
    PyJWT==1.6.4
    python-dateutil==2.7.3
    python-editor==1.0.3
    six==1.11.0
    SQLAlchemy==1.2.12
    yarl==1.2.6

[options.extras_require]
migration =
    alembic==1.0.0
    PyMySQL==0.9.2
test =
    atomicwrites==1.2.1
    more-itertools==4.3.0
    pluggy==0.8.0
    py==1.7.0
    pytest==3.9.2
    pytest-asyncio==0.9.0
    pytest-cov==2.6.0
    aiodocker==0.14.0

[options.packages.find]
where = src
include = awesome_applejuice_backend.*
